# profile.mobile.apps.native.calendar

./: .gitignore  CMakeLists.txt  NOTICE  WORKSPACE  build.sh  calendar.manifest.in  calendar.xml.in  install.sh  org.tizen.calendar-1.0.0-arm.tpk  org.tizen.calendar-1.0.0-i386.tpk  org.tizen.calendar.2.4.manifest  org.tizen.calendar.3.0.manifest  org.tizen.calendar.efl  org.tizen.calendar.xml  resourcify.sh  run.sh
app-assist-efl/: .cproject  .project  CMakeLists.txt
app-assist-efl/inc/: GuiDefines.h  IWUiObject.h  WApp.h  WAppEventHandler.h  WControl.h  WDebugBase.h  WDefine.h  WEvasObject.h  WGenlistItem.h  WMenuPopup.h  WNaviframe.h  WPopup.h  WToastPopup.h  WUiTimer.h  WView.h  WWidget.h  WWidgetApp.h  WWindow.h
app-assist-efl/res/: CMakeLists.txt
app-assist-efl/res/edje/: app-assist-efl.edc
app-assist-efl/src/: WApp.cpp  WAppEventHandler.cpp  WControl.cpp  WDebugInternal.h  WDefineInternal.h  WEvasObject.cpp  WGenlistItem.cpp  WMenuPopup.cpp  WNaviframe.cpp  WPopup.cpp  WUiTimer.cpp  WVersion.cpp  WView.cpp  WWindow.cpp
app-control/alert/: .cproject  .project  CMakeLists.txt  CalAlertApp.cpp  CalAlertApp.h  CalAlertData.cpp  CalAlertData.h  CalAlertItem.cpp  CalAlertItem.h  CalAlertModel.cpp  CalAlertModel.h  CalAlertNotificationItem.cpp  CalAlertNotificationItem.h  CalAlertType.h  CalAlertView.cpp  CalAlertView.h  CalNotificationsSelectAllItem.cpp  CalNotificationsView.cpp  CalNotificationsView.h  CalStatusBarManager.cpp  CalStatusBarManager.h  main.cpp  tizen-manifest.xml
app-control/edit/: .cproject  .project  CMakeLists.txt  CalEditApp.cpp  CalEditApp.h  main.cpp  tizen-manifest.xml
app-control/pick/: .cproject  .project  CMakeLists.txt  CalPickApp.cpp  CalPickApp.h  CalPickView.cpp  CalPickView.h  main.cpp  tizen-manifest.xml
app-control/view/: .cproject  .project  CMakeLists.txt  CalVcsView.cpp  CalVcsView.h  CalViewApp.cpp  CalViewApp.h  main.cpp  tizen-manifest.xml
calendar-app/: .cproject  .project  .sdk_delta.info  .tproject  CMakeLists.txt  tizen-manifest.xml  tizen-manifest.xml.in
calendar-app/inc/: CalendarApp.h  MainApp.h  OperationController.h  OperationDefaultController.h  OperationEditController.h  OperationPickController.h  OperationViewController.h
calendar-app/res/: CMakeLists.txt
calendar-app/res/agenda/: CMakeLists.txt
calendar-app/res/details/: CMakeLists.txt
calendar-app/res/edit/: CMakeLists.txt
calendar-app/res/event-list-item/: CMakeLists.txt
calendar-app/res/event_item/: CMakeLists.txt
calendar-app/res/event_list_item/: CMakeLists.txt
calendar-app/res/po/: az.po  ca.po  cs.po  el_GR.po  et.po  eu.po  gl.po  is.po  it_IT.po  ja_JP.po  kk.po  ko_KR.po  lt.po  lv.po  nb.po  pt_BR.po  sr.po  tr_TR.po  uz.po  zh_CN.po
calendar-app/src/: CalendarApp.cpp  MainApp.cpp  OperationController.cpp  OperationDefaultController.cpp  OperationEditController.cpp  OperationPickController.cpp  OperationViewController.cpp  main.cpp
common/: .cproject  .gitignore  .project  CMakeLists.txt  CalCommon.h  CalDebugInternal.h  CalDefines.h  CalSingleton.h  CalTheme.cpp  CalTheme.h  CalUtils.h  cal.h  cal_defines.h  cal_log.h  project_def.prop
common/fw/: CalAppControlLauncher.cpp  CalAppControlLauncher.h  CalAsyncTask.cpp  CalAsyncTask.h  CalControl.cpp  CalControl.h  CalDialogControl.cpp  CalDialogControl.h  CalDragRecognizer.cpp  CalDragRecognizer.h  CalEvent.cpp  CalEvent.h  CalEventManager.cpp  CalEventManager.h  CalMidnightNotifier.cpp  CalMidnightNotifier.h  CalNaviframe.cpp  CalNaviframe.h  CalPath.cpp  CalPath.h  CalSlideAnimator.cpp  CalSlideAnimator.h  CalTapRecognizer.cpp  CalTapRecognizer.h  CalTouchInputRecognizer.cpp  CalTouchInputRecognizer.h  CalView.cpp  CalView.h  CalWorker.cpp  CalWorker.h  ICalEventListener.h
common/inc/: Common.h
common/model/: CalBook.cpp  CalBook.h  CalBookManager.cpp  CalBookManager.h  CalComplexListProvider.cpp  CalComplexListProvider.h  CalCustomListModel.cpp  CalCustomListModel.h  CalDataManager.cpp  CalDataManager.h  CalDate.cpp  CalDate.h  CalDateTime.cpp  CalDateTime.h  CalEditModel.cpp  CalEditModel.h  CalInstanceSchedule.cpp  CalInstanceSchedule.h  CalInstanceScheduleSet.cpp  CalInstanceScheduleSet.h  CalListModel.cpp  CalListModel.h  CalListModel2.cpp  CalListModel2.h  CalListModelFactory.cpp  CalListModelFactory.h  CalLocaleManager.cpp  CalLocaleManager.h  CalOriginalSchedule.cpp  CalOriginalSchedule.h  CalRecordBlockFetcher.cpp  CalRecordBlockFetcher.h  CalSchedule.cpp  CalSchedule.h  CalScheduleReminder.cpp  CalScheduleReminder.h  CalScheduleRepeat.cpp  CalScheduleRepeat.h  CalSettingsManager.cpp  CalSettingsManager.h  (+10 more)
common/res/common/: CMakeLists.txt
common/src/: CMakeLists.txt
lib-calendar/: .cproject  CMakeLists.txt
lib-calendar/inc/Model/: DateTime.h  EventData.h
lib-calendar/src/Model/: DateTime.cpp  EventData.cpp
main-app/: .cproject  .gitignore  .project  .tproject  CMakeLists.txt  project_def.prop  tizen-manifest.xml  tizen-manifest.xml.in
main-app/inc/: AgendaView.h  CalendarApp.h  Common.h
main-app/inc/Agenda/: AgendaView.h
main-app/res/: CMakeLists.txt
main-app/res/common/: CMakeLists.txt
main-app/res/edje/: CMakeLists.txt  color_classes.edc  image.edc  master.edc
main-app/res/main/: CMakeLists.txt
main-app/res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  (+26 more)
main-app/shared/: CMakeLists.txt
main-app/src/: AgendaView.cpp  CMakeLists.txt  CalApp.cpp  CalApp.h  CalendarApp.cpp  main.cpp
test/: CMakeLists.txt  ReadMe.txt  test_run.sh
test/TC/: TestCalDateTime.cpp  TestCalSettingsManager.cpp  main.cpp
ui-app/: .cproject  CMakeLists.txt  tizen-manifest.xml  tizen-manifest.xml.in
ui-app/inc/: OperationDefaultController.h
ui-app/res/: CMakeLists.txt
ui-app/src/: MainApp.cpp  OperationController.cpp  OperationDefaultController.cpp  main.cpp
widget/: .cproject  .project  CMakeLists.txt  CalWidget.cpp  CalWidget.h  CalWidgetApp.cpp  CalWidgetApp.h  main.cpp  tizen-manifest.xml
(+347 files in other folders)
