SET(CALENDAR_COMMON calendar-common)
SET(CALENDAR_LIB_PATH "${CALENDAR_PREFIX}/lib" )

FILE(GLOB SRCS
	${CMAKE_SOURCE_DIR}/common/*.cpp
	${CMAKE_SOURCE_DIR}/common/*.c
	${CMAKE_SOURCE_DIR}/common/fw/*.cpp
	${CMAKE_SOURCE_DIR}/common/fw/*.c
	${CMAKE_SOURCE_DIR}/common/model/*.cpp
	${CMAKE_SOURCE_DIR}/common/model/*.c
)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/common
	${CMAKE_SOURCE_DIR}/common/fw
	${CMAKE_SOURCE_DIR}/common/model
)

ADD_LIBRARY(${CALENDAR_COMMON} SHARED ${SRCS})
#ADD_LIBRARY(${CALENDAR_COMMON} STATIC ${SRCS})

TARGET_LINK_LIBRARIES(${CALENDAR_COMMON} app-assist-efl ${pkgs_LDFLAGS})

INSTALL(TARGETS ${CALENDAR_COMMON} DESTINATION ${CALENDAR_LIB_PATH})
