# Icons

# Application icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/org.tizen.calendar.png DESTINATION ${SHAREDRESDIR})
# Widget preview icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/org.tizen.calendar_preview.png DESTINATION ${SHAREDRESDIR})
# Active notification icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/noti_calendar_02.png DESTINATION ${SHAREDRESDIR})
# Notification icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/noti_calendar.png DESTINATION ${SHAREDRESDIR})
