# Icons

# Application icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/org.tizen.calendar.png DESTINATION ${SHAREDRESDIR})
# Widget preview icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/org.tizen.calendar_preview.png DESTINATION ${SHAREDRESDIR})
# Active notification icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/noti_calendar_02_while.png DESTINATION ${SHAREDRESDIR})
# Notification icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/noti_calendar_blue.png DESTINATION ${SHAREDRESDIR})
# Indicator icon
INSTALL(FILES ${CMAKE_SOURCE_DIR}/main-app/shared/res/noti_calendar_white.png DESTINATION ${SHAREDRESDIR})
