SET(LAYOUT_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(THEME_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/theme)
SET(IMAGES_RES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/images)
SET(SOUNDS_RES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sounds)
FILE(GLOB FILES_MASTER_DEP ${CMAKE_CURRENT_SOURCE_DIR}/inc/*.edc)
FILE(GLOB FILES_THEME_DEP ${THEME_SRC_DIR}/inc/*.edc)

SET(EDJE_CMDLINE_DEFINE "-DGBS_BUILD")

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/image.edj
	COMMAND edje_cc ${EDJE_CC_DEFINES} ${EDJE_CMDLINE_DEFINE}
	-id ${IMAGES_RES_DIR}
	${LAYOUT_SRC_DIR}/image.edc ${CMAKE_BINARY_DIR}/image.edj
	DEPENDS ${LAYOUT_SRC_DIR}/image.edc
)
ADD_CUSTOM_TARGET(image-edj DEPENDS ${CMAKE_BINARY_DIR}/image.edj)
ADD_DEPENDENCIES(${PROJECT_NAME} image-edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/image.edj DESTINATION ${EDJDIR})

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/master.edj
	COMMAND edje_cc ${EDJE_CC_DEFINES} ${EDJE_CMDLINE_DEFINE}
	-id ${IMAGES_RES_DIR} -sd ${SOUNDS_RES_DIR}
	${LAYOUT_SRC_DIR}/master.edc ${CMAKE_BINARY_DIR}/master.edj
	DEPENDS ${LAYOUT_SRC_DIR}/master.edc ${FILES_MASTER_DEP}
)
ADD_CUSTOM_TARGET(master-edj DEPENDS ${CMAKE_BINARY_DIR}/master.edj)
ADD_DEPENDENCIES(${PROJECT_NAME} master-edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/master.edj DESTINATION ${EDJDIR})

ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/theme.edj
	COMMAND edje_cc ${EDJE_CC_DEFINES} ${EDJE_CMDLINE_DEFINE}
	-id ${IMAGES_RES_DIR} -sd ${SOUNDS_RES_DIR}
	${THEME_SRC_DIR}/theme.edc ${CMAKE_BINARY_DIR}/theme.edj
	DEPENDS ${THEME_SRC_DIR}/theme.edc ${FILES_THEME_DEP}
)
ADD_CUSTOM_TARGET(theme-edj DEPENDS ${CMAKE_BINARY_DIR}/theme.edj)
ADD_DEPENDENCIES(${PROJECT_NAME} theme-edj)
INSTALL(FILES ${CMAKE_BINARY_DIR}/theme.edj DESTINATION ${EDJDIR}/theme)
